# github-release-poetry-test

./: README.md  pyproject.toml
.github/workflows/: issue_release.yaml
