[tool.poetry]
name = "my-package"
version = "0.1.0"
description = ""
authors = ["Jake Anderson <jake94a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

mypy = { version = "1.8.0", extras = [""] }